# vulkan

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: cmake-multi-platform.yml  cmake-ubuntu.yml
engine/: .clang-format  CMakeLists.txt
engine/source/: main.cpp
sample1/: .clang-format  .gitignore  CMakeLists.txt  build.bat  build.sh  clean.sh  readme.md
sample1/cmake/: FindDocTest.cmake  FindGTest.cmake  FindSDL2.cmake  Findabc.cmake
sample1/lib/: CMakeLists.txt
sample1/lib/core/: CMakeLists.txt
sample1/lib/core/include/core/: core.h  memory.h  scoped.h
sample1/lib/core/test/: main.cpp
sample1/lib/gfx/: CMakeLists.txt
sample1/lib/gfx/include/core/: core.h
sample1/lib/gfx/include/gfx/: Device.h  vk_init.h  vk_types.h
sample1/lib/gfx/source/vk/: vk_engine.cpp  vk_engine.h  vk_init.h
sample1/lib/math/: CMakeLists.txt
sample1/lib/math/include/math/: core.h  vec.h
sample1/lib/math/test/: CMakeLists.txt  main.cpp
sample1/lib/math/test/performance/: CMakeLists.txt  main.cpp
sample1/sdl_hello/: CMakeLists.txt
sample1/sdl_hello/source/: TextureWrapper.h  main.cpp
sample1/source/: main.cpp
sample1/source/vk_hello/: SDLWindow.cpp  SDLWindow.h  SDLWindowVulkan.cpp  SDLWindowVulkan.h  Shader.h  main.cpp
sample1/vk_hello/: CMakeLists.txt
sample1/vk_hello/source/: SDLWindow.cpp  SDLWindow.h  SDLWindowVulkan.cpp  SDLWindowVulkan.h  Shader.h  SwapChain.h  main.cpp
